--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 data/*
 !data/.gitkeep
 
+saved_models/*
+!saved_models/.gitkeep
+
 # Created by https://www.toptal.com/developers/gitignore/api/vim,pycharm,visualstudiocode,python,venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,pycharm,visualstudiocode,python,venv
 
