--- a/configs/ConvVAE_config.yaml
+++ b/configs/ConvVAE_config.yaml
@@ -1,5 +1,5 @@
 data:
-  file_path: 'data/dataset.npy'
+  file_path: 'data/small/10k_Fractal.npy'
 
 dataset:
   # Splits are ~ 60% training, 20% validation, 20% test
