--- a/configs/ConvVAE_config.yaml
+++ b/configs/ConvVAE_config.yaml
@@ -44,3 +44,8 @@ training:
   optimizer_params:
     lr: 0.0001
     weight_decay: 0.0001
+  annealer_params:
+    annealing_type: cosine
+    beta_0: 0.0
+    cyclical: False
+    disable: False
