--- a/configs/FcVAE_config.yaml
+++ b/configs/FcVAE_config.yaml
@@ -45,7 +45,7 @@ training:
     lr: 0.0001
     weight_decay: 0.0001
   annealer_params:
-    annealing_type: logistic
+    annealing_type: cosine
     beta_0: 0.0
     cyclical: False
     disable: False
