--- a/configs/TransformerVAE_config.yaml
+++ b/configs/TransformerVAE_config.yaml
@@ -28,16 +28,16 @@ model:
     latent_dim: 2048
     num_components: 16
   encoder_params:
-    input_dim: [1,129,129]
-    out_channels: [512, 256, 128, 64]
+    input_dim: [1,65,65]
+    out_channels: [256, 128, 64]
     layers_per_block: 2
     kernel_size: 3
     down_sample_factor: 2
     num_heads: 16
   decoder_params:
     input_shape: [64, 8, 8]
-    output_shapes: [[256, 16, 16],[128, 32, 32],[64, 64, 64],[1, 129, 129]]
-    conditional_shape: [1,129,129]
+    output_shapes: [[256, 16, 16],[128, 32, 32],[1, 65, 65]]
+    conditional_shape: [1,65,65]
     layers_per_block: 1
     kernel_size: 3
 
