--- a/configs/TransformerVAE_config.yaml
+++ b/configs/TransformerVAE_config.yaml
@@ -36,16 +36,22 @@ model:
     num_heads: 16
   decoder_params:
     input_shape: [64, 8, 8]
-    output_shapes: [[256, 16, 16],[128, 32, 32],[1, 65, 65]]
+    output_shapes: [[256, 16, 16],[128, 32, 32], [32, 65, 65]]
+    output_dim: [1, 65, 65]
     conditional_shape: [1,65,65]
     layers_per_block: 1
     kernel_size: 3
 
 training:
   model_name: fractal/TransformerVAE.pt
-  batch_size: 32
+  batch_size: 8
   num_epochs: 250
   optimizer: Adam
   optimizer_params:
     lr: 0.0001
     weight_decay: 0.0001
+  annealer_params:
+    annealing_type: cosine
+    beta_0: 0.0
+    cyclical: False
+    disable: True
