--- a/configs/fractal/FcVAE_config.yaml
+++ b/configs/fractal/FcVAE_config.yaml
@@ -28,17 +28,17 @@ model:
     latent_dim: 64
     num_components: 16
   encoder_params:
-    input_dim: 16641
+    input_dim: 4225
     hidden_dims: [512, 256, 128]
     latent_dim: 64
   decoder_params:
     latent_dim: 64
     hidden_dims: [128, 256, 512]
-    output_dim: 16641
+    output_dim: 4225
 
 training:
-  model_name: fractal/small/FcVAE.pt
-  batch_size: 64
+  model_name: fractal/FcVAE.pt
+  batch_size: 32
   num_epochs: 250
   optimizer: Adam
   optimizer_params:
